Add stylesheet link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>jQuery elements</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <div>
